[gd_scene load_steps=8 format=3 uid="uid://dvxqhpd3ako6f"]

[ext_resource type="Script" path="res://bullet.gd" id="1_36a04"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w1brr"]
albedo_color = Color(0.890196, 1, 0.0627451, 1)
emission_enabled = true
emission = Color(0.8, 1, 0, 1)
emission_energy_multiplier = 9.24

[sub_resource type="BoxMesh" id="BoxMesh_h6icg"]
material = SubResource("StandardMaterial3D_w1brr")
size = Vector3(0.05, 0.05, 0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_fw82e"]
points = PackedVector3Array(-0.0289628, -0.0289628, -0.253968, 0.025, 0.025, 0.239503, 0.0265819, -0.0289628, 0.253968, -0.0289628, 0.0265819, 0.253968, 0.025, 0.025, -0.239503, -0.0289628, -0.0289628, 0.253968, 0.0265819, -0.0289628, -0.253968, -0.0289628, 0.0265819, -0.253968)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iwm8j"]
direction = Vector3(1, 0, 1)
initial_velocity_min = 3.37
initial_velocity_max = 5.97

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l0gog"]
transparency = 1
albedo_color = Color(0.878431, 1, 0.0509804, 0.729412)
emission_enabled = true
emission = Color(0.737255, 0.972549, 0, 1)
emission_energy_multiplier = 13.18
emission_operator = 1

[sub_resource type="BoxMesh" id="BoxMesh_rgfui"]
material = SubResource("StandardMaterial3D_l0gog")
size = Vector3(0.04, 0.04, 0.04)

[node name="bullet" type="Node3D"]
script = ExtResource("1_36a04")

[node name="RigidBody3D" type="RigidBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
mesh = SubResource("BoxMesh_h6icg")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("ConvexPolygonShape3D_fw82e")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0134214)
target_position = Vector3(0, 0, -0.35)

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.59875)
emitting = false
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_iwm8j")
draw_pass_1 = SubResource("BoxMesh_rgfui")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="RigidBody3D" to="." method="_on_rigid_body_3d_body_entered"]
[connection signal="body_shape_entered" from="RigidBody3D" to="." method="_on_rigid_body_3d_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
